# AppGenX

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
appgen/: __init__.py  analyze_limits.py  cli.py  cli_runs.py  config.py  constants.py  discovery.py  llm.py  llm_cursor.py  pipeline.py  pipeline_tasks.py  review.py  run_state.py  run_views.py  runtime_settings.py  scan_bridge.py  scan_cancel.py  scan_errors.py  scan_fetch_concurrency.py  scan_flow.py  scan_preferences.py  storage.py
appgen/agents/: __init__.py  analyst.py  base.py  designer.py  dev_code.py  dev_init.py  dev_scaffold.py  dev_verify.py  pm.py  qa.py  scout.py  store.py
appgen/models/: __init__.py
appgen/templates/: design.md.j2  prd.md.j2  privacy_policy.html.j2  store_listing.md.j2
appgen/tools/: appstore.py  genres.py  ios_project.py  ios_standards.py  regions.py  search.py
appgen/web/: app.py
appgen/web/frontend/: index.html  package-lock.json  package.json  vite.config.js
docs/: PLAYBOOKS.md
specs/: pref_2025-06-25.md
tests/: conftest.py  test_analyze_max_snapshots.py  test_appstore_concurrency.py  test_auto_review.py  test_discovery.py  test_ios_project.py  test_keyword_focus.py  test_llm_context.py  test_llm_cursor.py  test_llm_json.py  test_llm_profiles.py  test_pipeline.py  test_run_resume.py  test_run_views.py  test_runtime_settings.py  test_scan_analyze.py  test_scan_bridge.py  test_scan_errors.py  test_scan_fetch_concurrency.py  test_scan_fetch_queue.py  test_scan_flow.py  test_scan_incremental.py  test_scan_preferences.py  test_scout_picked.py
(+11 files in other folders)
