[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appgen-agent"
version = "0.1.0"
description = "AppGen Agent — 从 App Store 需求挖掘到上架的全链路多智能体流水线"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AppGen Team" }]
dependencies = [
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "openai>=1.40.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
cursor = [
  "cursor-sdk>=0.1.8",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[project.scripts]
appgen = "appgen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["appgen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
